force-app/main/default/objects/Account/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <label>Crédito Disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>