force-app/main/default/objects/Account/fields/Cr_dito_Dispon_vel_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Cr_dito_Dispon_vel_Calculado__c</fullName>
    <formula>BLANKVALUE(Credit_Limit__c, 0) - BLANKVALUE(Cr_dito_Utilizado__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito Disponível Calculado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>