force-app/main/default/objects/Account/fields/Cr_dito_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Cr_dito_Utilizado__c</fullName>
    <description>Armazena o total de crédito atualmente utilizado pelo cliente em vendas a prazo ainda consideradas em aberto.</description>
    <inlineHelpText>Valor usado para calcular o crédito disponível do cliente.</inlineHelpText>
    <label>Crédito Utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>