force-app/main/default/objects/Account/fields/Customer_Size__c.field-meta.xml
<CustomField>
    <fullName>Customer_Size__c</fullName>
    <label>Porte do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pequeno</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
                <label>Médio</label>
            </value>
            <value>
                <fullName>Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>