force-app/main/default/objects/Account/fields/Data_da_ltima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_da_ltima_Visita__c</fullName>
    <description>Armazena a data da visita mais recente registrada para o produtor.</description>
    <inlineHelpText>Atualizado automaticamente com base nas visitas registradas para o produtor.</inlineHelpText>
    <label>Data da Última Visita</label>
    <type>Date</type>
</CustomField>