force-app/main/default/objects/Account/fields/Purchases_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Purchases_Last_12_Months__c</fullName>
    <label>Compras nos Últimos 12 Meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>