force-app/main/default/objects/Account/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Nível de Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
                <label>Médio</label>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>